Switched from fileContent != null && !fileContent.isBlank() to org.apache.commons.lang3.StringUtils !isBlank(fileContent)